Добавил вкладку скнины, специально для тех, кто хотел бы посмотреть, как выглядит результат(ибо я тут очень много чего меняю, так что на данный момент нехрина не работает), скрины идут по возростанию, с самого создания проекта, и до нынешнего момента

--- a/PathTracing_V2/PathTracing_V2.vcxproj.filters
+++ b/PathTracing_V2/PathTracing_V2.vcxproj.filters
@@ -96,6 +96,15 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ComputeShader.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="UnorderedAccessView.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Buffer.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h">
@@ -194,6 +203,15 @@
     <ClInclude Include="Camera.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ComputeShader.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="UnorderedAccessView.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Buffer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -205,5 +223,6 @@
     <FxCompile Include="PSTexturing.hlsl" />
     <FxCompile Include="PSRayTracing.hlsl" />
     <FxCompile Include="PSDefault.hlsl" />
+    <FxCompile Include="RayGenerationShader.hlsl" />
   </ItemGroup>
 </Project>
