Наконец вычеслительный шейдер заработал! Ураааа :)

--- a/PathTracing_V2/PathTracing_V2.vcxproj
+++ b/PathTracing_V2/PathTracing_V2.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="StructuredBuffer.cpp" />
+    <ClCompile Include="TestingComputeShader.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="UnorderedAccessView.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
@@ -86,6 +87,7 @@
     <ClInclude Include="ShaderTexturing.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="StructuredBuffer.h" />
+    <ClInclude Include="TestingComputeShader.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="UnorderedAccessView.h" />
     <ClInclude Include="Vector4.h" />
