Structured buffer почему то не работает, но есть вариант, с помощью которого я возможно смогу понять что же не так

--- a/PathTracing_V2/PathTracing_V2.vcxproj.filters
+++ b/PathTracing_V2/PathTracing_V2.vcxproj.filters
@@ -230,5 +230,6 @@
     <FxCompile Include="PSRayTracing.hlsl" />
     <FxCompile Include="PSDefault.hlsl" />
     <FxCompile Include="RayGenerationShader.hlsl" />
+    <FxCompile Include="IntersectionShader.hlsl" />
   </ItemGroup>
 </Project>
