Сейчас буду пытаться заоопэшить создание буфферов и тд, но довольно таки много поменять видемо нужно будет, так что сделаю ка я коммит :& <-- это смайлик если что

--- a/PathTracing_V2/PathTracing_V2.vcxproj
+++ b/PathTracing_V2/PathTracing_V2.vcxproj
@@ -45,6 +45,7 @@
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Sphere_PT.cpp" />
+    <ClCompile Include="SRV.cpp" />
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="TestingComputeShader.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -87,6 +88,7 @@
     <ClInclude Include="ShaderTexturing.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Sphere_PT.h" />
+    <ClInclude Include="SRV.h" />
     <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="TestingComputeShader.h" />
     <ClInclude Include="Timer.h" />
