--- a/PathTracing_V2/PathTracing_V2.vcxproj.filters
+++ b/PathTracing_V2/PathTracing_V2.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="Texture2D.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="UAV.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h">
@@ -231,6 +234,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Texture2D.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="UAV.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
