Ура, теперь можно задавать цвет объектам, ооочень скоро будет уже красивая графика, но уже с новой системой(могу управлять сценой через cpp файл, и очень легко ставить текстурки на объекты), а если конкретнее, но вероятно уже завтра. Правда только сферы, но думаю и модельки не долго добавить(надеюсь). А тут уже и до BVH не далеко :p

--- a/PathTracing_V2/PathTracing_V2.vcxproj.filters
+++ b/PathTracing_V2/PathTracing_V2.vcxproj.filters
@@ -252,5 +252,6 @@
     <FxCompile Include="PSDefault.hlsl" />
     <FxCompile Include="RayGenerationShader.hlsl" />
     <FxCompile Include="IntersectionShader.hlsl" />
+    <FxCompile Include="Clossest_HitShader.hlsl" />
   </ItemGroup>
 </Project>
